# Quize-App-in-fast-api

./: Readme.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/components/: Button.tsx  Mycompnent.tsx
frontend/src/components/lib/utils/: type.ts
quiz_app/: README.md  pyproject.toml
quiz_app/app/: main.py  setting.py
quiz_app/app/controller/: admin_controller.py  auth_controller.py  quiz_controllers.py  user_controllers.py
quiz_app/app/db/: db_connector.py
quiz_app/app/model/: admin_models.py  quiz_models.py  user_models.py
quiz_app/app/utils/: exceptions.py  imports.py
